--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,14 +1,13 @@
-<body class="login_form">
-  <h1>Login</h1>
-  <form>
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username">
+<div class="login-container">
+  <form class="login_form" (ngSubmit)="login()">
+    <input [(ngModel)]="email" name="email" type="email" placeholder="Email" required />
+    <br>
+    <input [(ngModel)]="pass" name="pass" type="password" placeholder="Jelszó" required />
+    <div class="buttons">
+      <button type="submit">Login</button>
     </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password">
+    <div *ngIf="errorMessage">
+      <p>{{errorMessage}}</p>
     </div>
-    <button type="submit">Login</button>
   </form>
-</body>
+</div>
