Full szerzo backend support

--- a/client/src/app/my-publications/my-publications.component.html
+++ b/client/src/app/my-publications/my-publications.component.html
@@ -1,1 +1,12 @@
-<p>my-publications works!</p>
+<div class="main-div">
+  <h2>Publikációid listája:</h2>
+  <tr *ngFor="let pub of publications">
+    <td>
+      {{pub[1]}}
+    </td>
+
+    <td>
+      <button type="button" id={{pub[0]}} (click)="openPublication(pub[0])">Megnyitás</button>
+    </td>
+  </tr>
+</div>
