--- a/client/src/app/waiting-approval/waiting-approval.component.html
+++ b/client/src/app/waiting-approval/waiting-approval.component.html
@@ -1,1 +1,12 @@
-<p>waiting-approval works!</p>
+<div class="main-div">
+  <h2>Bírálatra váró publikációk:</h2>
+  <tr *ngFor="let pub of publications">
+    <td>
+      {{pub[1]}}
+    </td>
+
+    <td>
+      <button type="button" id={{pub[0]}} (click)="openPublication(pub[0])">Megnyitás</button>
+    </td>
+  </tr>
+</div>
