Backend logic almost complete

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,6 +8,7 @@
   <!-- Biralo oldalai  -->
   <div class="biralo" *ngIf="getUserRank() == 'biralo'">
     <a routerLink="/waitingApproval">Bírálatra vár</a>
+    <a routerLink="/viewAccepted">Elfogadott bírálatok</a>
   </div>
 
   <!-- Szerkeszto oldalai -->
