--- a/client/src/app/view-publication/view-publication.component.html
+++ b/client/src/app/view-publication/view-publication.component.html
@@ -1,20 +1,25 @@
 <div class="main-div">
-  <div *ngIf="getUserRank() != 'biralo'">
+  <div *ngIf="getUserRank() != 'biralo'; else elseBlock">
+    1. Bíráló:
     <div *ngIf="hozzarendeltBiralok[0] != undefined">
-      1. Bíráló: {{hozzarendeltBiralok[0][0]}}
-      Értékelés: {{hozzarendeltBiralok[0][1]}}
+      {{hozzarendeltBiralok[0][0]}}. Értékelés: {{hozzarendeltBiralok[0][1]}}
     </div>
+    <ng-template #elseBlock>
+      Jelenleg nincs kiválasztva.
+    </ng-template>
+    2. Bíráló:
     <div *ngIf="hozzarendeltBiralok[1] != undefined">
-      2. Bíráló: {{hozzarendeltBiralok[1][0]}}
-      Értékelés: {{hozzarendeltBiralok[1][1]}}
+      {{hozzarendeltBiralok[1][0]}}. Értékelés: {{hozzarendeltBiralok[1][1]}}
     </div>
+    <ng-template #elseBlock>
+      Jelenleg nincs kiválasztva.
+    </ng-template>
   </div>
   <ng-template #elseBlock>
     <div>
       Bírálat elfogadása:
       <form>
-        <button type="submit">Elfogadás</button>
-        <button type="submit">Elutasítás</button>
+        <button type="submit" (click)="acceptReview()">Elfogadás</button>
       </form>
     </div>
   </ng-template>
