--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<p>A weboldal publikációk bírálására szolgál.</p>
+<div class="description">
+  <p>Jelentkezz be, vagy regisztrálj új fiókot.</p>
+
+  A következő szerepkörök érhetők el:
+  <ul>
+    <li>Szerző: Publikációk feltöltése.</li>
+    <li>Szerkesztő: Publikációk véleményezése, és bírálók kiválasztása a vélemény jóváhagyására.</li>
+    <li>Bíráló: Szerkesztő véleményének jóváhagyása</li>
+  </ul>
+
+</div>
