--- a/client/src/app/register/register.component.scss
+++ b/client/src/app/register/register.component.scss
@@ -34,10 +34,15 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 input[type="radio"] {
   width: 100px;
   padding: 5px;
   margin-bottom: 20px;
+}
+
+mat-radio-button {
+  margin: 0 10px;
 }
