--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  background-color: grey;
+  height: 95%;
+}
+
+body {
+  width: 75%;
+  margin: auto;
+  height: 100%;
+}
