User sites better frontend

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -7,7 +7,10 @@
 .main-container {
   background-color: white;
   text-align: center;
-  height: 100%;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 
 a {
