--- a/client/src/app/my-publications/my-publications.component.html
+++ b/client/src/app/my-publications/my-publications.component.html
@@ -1,12 +1,14 @@
-<div class="main-div">
-  <h2>Publikációid listája:</h2>
-  <tr *ngFor="let pub of publications">
-    <td>
-      {{pub[1]}}
-    </td>
-
-    <td>
-      <button type="button" id={{pub[0]}} (click)="openPublication(pub[0])">Megnyitás</button>
-    </td>
-  </tr>
+<div class="table-container">
+  <table class="table">
+    <tr>
+      <th>Publikáció neve</th>
+      <th>Műveletek</th>
+    </tr>
+    <tr *ngFor="let pub of publications">
+      <td>{{pub[1]}}</td>
+      <td>
+        <button type="button" id={{pub[0]}} (click)="openPublication(pub[0])">Megnyitás</button>
+      </td>
+    </tr>
+  </table>
 </div>
