--- a/client/src/app/new-publication/new-publication.component.scss
+++ b/client/src/app/new-publication/new-publication.component.scss
@@ -1,4 +1,46 @@
+.container {
+  width: 85%;
+  margin: auto;
+  padding: 20px;
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
 .publication_form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 1.1em;
+  margin-bottom: 10px;
+}
+
+.text-input-name,
+.text-input {
+  width: 95%;
+  padding: 10px;
+  margin: auto;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #ced4da;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+/* .publication_form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,4 +64,4 @@
   color: white;
   border: none;
   cursor: pointer;
-}
+} */
