--- a/client/src/app/view-publication/view-publication.component.scss
+++ b/client/src/app/view-publication/view-publication.component.scss
@@ -22,12 +22,13 @@
   color: #6c757d;
 }
 
-.accept-review {
+.submit-review {
   margin-bottom: 20px;
 }
 
-.accept-button {
+.review-button {
   padding: 10px 20px;
+  margin: 10px;
   background-color: #007bff;
   color: white;
   border: none;
