--- a/client/src/app/view-publication/view-publication.component.scss
+++ b/client/src/app/view-publication/view-publication.component.scss
@@ -43,6 +43,13 @@
   text-shadow: 1px 1px 0px grey;
 }
 
+.rejected-text {
+  color: darkred;
+  font-size: medium;
+  font-weight: bold;
+  text-shadow: 1px 1px 0px grey;
+}
+
 .accept-button:hover {
   background-color: #0056b3;
 }
